Updated legend, fixed label not showing on initial load, started YT points

--- a/DemoFromGitHubFolder/style.css
+++ b/DemoFromGitHubFolder/style.css
@@ -155,5 +155,6 @@ ul {
 }
 */
 
+#map .cartodb-legend { position: absolute; right: 30px; width: 100px; top:10px; background: rgba(255,255,255,1); padding: 15px; z-index: 99; bottom: auto;}
 
 
